--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 POSTGRES_PASSWORD=095X0Ch2oRu6
 POSTGRES_USER=postgres
 POSTGRES_DB=shop
+POSTGRES_HOST=localhost
 
 POSTGRESQL_URL=postgres://postgres:095X0Ch2oRu6@localhost:5432/shop?sslmode=disable
 
