--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ POSTGRES_PASSWORD=095X0Ch2oRu6
 POSTGRES_USER=postgres
 POSTGRES_DB=shop
 POSTGRES_HOST=localhost
+POSTGRES_INNER_HOST=avito-shop-db
 
-POSTGRESQL_URL=postgres://postgres:095X0Ch2oRu6@localhost:5432/shop?sslmode=disable
 
 JWT_SECRET_KEY=LnUdZmgj5ziVH7QImfAh4k5s0n7M58KJ
